--- a/client/index.html
+++ b/client/index.html
@@ -4,23 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GraphQL School Profile</title>
-  <!-- Suppress favicon request -->
   <link rel="icon" href="data:,">
-  <!-- Link to the external styles.css file -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <img src="../img/logo.png" alt="School Logo" class="logo">
   <div class="container">
     <div class="header">
       <h1>School Profile - GraphQL Project</h1>
     </div>
-
     <!-- Login Page -->
     <div id="login-page" style="display: none;">
       <div class="login-container">
-        <h2>Sign In</h2>
-        <p>Please enter your username or email and password to access your profile.</p>
-
         <form id="login-form">
           <div class="form-group">
             <label for="username">Username or Email</label>
