--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,10 @@
 
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" id="password" required>
+            <div class="password-wrapper">
+              <input type="password" id="password" required>
+              <span id="toggle-password" class="password-toggle">👁️</span>
+            </div>
           </div>
 
           <button type="submit">Sign In</button>
