Add current module level

--- a/client/index.html
+++ b/client/index.html
@@ -68,11 +68,11 @@
           </div>
         </div>
 
-        <!-- Progress Info Card -->
-        <div class="card" id="progress-info">
-          <h2>Progress Information</h2>
-          <p>Loading progress information...</p>
-        </div>
+        <!-- Add this with your other cards in the grid section -->
+<div class="card" id="level-info">
+  <h2>Module Progress</h2>
+  <p>Loading level information...</p>
+</div>
 
         <!-- Audit Info Card -->
         <div class="card" id="audit-info">
