Moved logo file to root for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="login-page" class="page-container">
         <div class="login-wrapper">
             <div class="welcome-panel">
-                <img src="../img/logo.png" alt="Zone01 Kisumu Logo" class="welcome-logo">
+                <img src="/img/logo.png" alt="Zone01 Kisumu Logo" class="welcome-logo">
                 <h1>Welcome to Zone01 Kisumu!</h1>
                 <p>This is your first step. A two-part game challenging your memory and logical thinking.</p>
                 <div class="info-steps">
